--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>EXAM</title>
+	<link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+	<body>
+		<section class="container">
+			<section class="wrapper">
+				<header class="header">
 
-</body>
+				</header>
+			</section>
+		</section>
+	</body>
 </html>
