first commit of colaborate project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>EXAM</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet"
+		  href="styles/sections-2-3.css">
 </head>
 	<body>
 		<section class="container">
@@ -35,5 +37,65 @@
 			</section>
 			
 		</section>
+		<div id="secondpage">
+			<div id="granuls">
+				<div class="product-item">
+					<a href="#"><img src="./images/image1.png"
+									 alt=""></a>
+					<p class="item-price"><span class="dollar-sign">$</span> 5.99</p>
+					<p class="item-name">Brazilian coffee beans</p>
+					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
+				</div>
+				<div class="product-item">
+					<a href="#"><img src="./images/Image2.png"
+									 alt=""></a>
+					<p class="item-price"><span class="dollar-sign">$</span> 4.99</p>
+					<p class="item-name"><a href="#"
+											class="href-paragraph">Vietnam coffee beans</a></p>
+					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
+				</div>
+				<div class="product-item">
+					<a href="#"><img src="./images/image3.png"
+									 alt=""></a>
+					<p class="item-price"><span class="dollar-sign">$</span> 3.99</p>
+					<p class="item-name"><a href="#"
+											class="href-paragraph">Indonesian coffe beans</a></p>
+					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
+				</div>
+			</div>
+		</div>
+
+		<div id="thirdpage">
+
+			<p class="text-headers">Our Gallery</p>
+			<p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
+									   what to
+									   call their new coffee.</p>
+			<div id="img-container-1">
+				<div id="first-img-row">
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-Image1.png"
+												   alt=""></a>
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-Image2.png"
+												   alt=""></a>
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-Image3.png"
+												   alt=""></a>
+				</div>
+				<div id="second-img-row">
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-row-Image1.png"
+												   alt=""></a>
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-row-Image2.png"
+												   alt=""></a>
+					<a href="#"
+					   class="href-paragraph"><img src="./images/second-row-Image3.png"
+												   alt=""></a>
+				</div>
+			</div>
+			<p id="loadmore">LOAD MORE</p>
+		</div>
 	</body>
 </html>
