first commit of colaborate project

--- a/index.html
+++ b/index.html
@@ -37,65 +37,76 @@
 			</section>
 			
 		</section>
-		<div id="secondpage">
-			<div id="granuls">
-				<div class="product-item">
-					<a href="#"><img src="./images/image1.png"
-									 alt=""></a>
-					<p class="item-price"><span class="dollar-sign">$</span> 5.99</p>
-					<p class="item-name">Brazilian coffee beans</p>
-					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
-				</div>
-				<div class="product-item">
-					<a href="#"><img src="./images/Image2.png"
-									 alt=""></a>
-					<p class="item-price"><span class="dollar-sign">$</span> 4.99</p>
-					<p class="item-name"><a href="#"
-											class="href-paragraph">Vietnam coffee beans</a></p>
-					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
-				</div>
-				<div class="product-item">
-					<a href="#"><img src="./images/image3.png"
-									 alt=""></a>
-					<p class="item-price"><span class="dollar-sign">$</span> 3.99</p>
-					<p class="item-name"><a href="#"
-											class="href-paragraph">Indonesian coffe beans</a></p>
-					<p class="item-description">Coffee that’s always you handle your own the way you like. </p>
-				</div>
-			</div>
-		</div>
+        <div id="thirdpage">
 
-		<div id="thirdpage">
+            <p class="text-headers">Our Gallery</p>
+            <p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
+                                       what to
+                                       call their new coffee.</p>
+            <div id="img-container-1">
+                <div id="first-img-row">
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-Image1.png"
+                                                   alt=""></a>
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-Image2.png"
+                                                   alt=""></a>
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-Image3.png"
+                                                   alt=""></a>
+                </div>
+                <div id="second-img-row">
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-row-Image1.png"
+                                                   alt=""></a>
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-row-Image2.png"
+                                                   alt=""></a>
+                    <a href="#"
+                       class="href-paragraph"><img src="./images/second-row-Image3.png"
+                                                   alt=""></a>
+                </div>
+            </div>
+            <p id="loadmore">LOAD MORE</p>
+        </div>
 
-			<p class="text-headers">Our Gallery</p>
-			<p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
-									   what to
-									   call their new coffee.</p>
-			<div id="img-container-1">
-				<div id="first-img-row">
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-Image1.png"
-												   alt=""></a>
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-Image2.png"
-												   alt=""></a>
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-Image3.png"
-												   alt=""></a>
-				</div>
-				<div id="second-img-row">
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-row-Image1.png"
-												   alt=""></a>
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-row-Image2.png"
-												   alt=""></a>
-					<a href="#"
-					   class="href-paragraph"><img src="./images/second-row-Image3.png"
-												   alt=""></a>
-				</div>
-			</div>
-			<p id="loadmore">LOAD MORE</p>
-		</div>
+        <div id="forthpage">
+            <p></p>
+            <p></p>
+            <p id="followus">Follow US</p>
+            <div>
+                <p class="text-headers">Have an inquiry?</p>
+                <p class="text-headers">Text or call and ask Something.</p>
+            </div>
+            <div id="contacts-compress">
+                <p class="contacts">
+                    <img src="./images/Telephone.png"
+                         alt=""
+                         class="icon-contact">
+                    +8801742-527137
+                </p>
+                <p class="contacts">
+                    <img src="./images/gmail%20loogo.png"
+                         alt=""
+                         class="icon-contact">
+                    mdmaksedur17@gmail.com
+                </p></div>
+            <div class="round-buttons">
+                <a href="#"><img src="./images/icons/Twitter.png"
+                                 alt=""
+                                 class="round-image"></a>
+                <a href="#"><img src="./images/icons/Facebook.png"
+                                 alt=""
+                                 class="round-image"></a>
+                <a href="#"><img src="./images/icons/Instagram.png"
+                                 alt=""
+                                 class="round-image"></a>
+                <a href="#"><img src="./images/icons/Linkdin.png"
+                                 alt=""
+                                 class="round-image"></a>
+            </div>
+            <p></p>
+            <p></p>
+        </div>
 	</body>
 </html>
