--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 
 				<div class="coffe-bean">
-					<img src="images/image2.png" alt="coffe-beans-2">
+					<img src="images/Image2.png" alt="coffe-beans-2">
 					<p class="coffe-bean__price">$ 4.99</p>
 					<h3>Brazilian coffe beans</h3>
 					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
@@ -73,6 +73,7 @@
 
 		</div>
 
+<!--	-----	Our Gallery ------->
 
         <div id="thirdpage">
 
