corrected background image

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <p id="loadmore">LOAD MORE</p>
         </div>
 
+<!--	-----	Follow US ------->
+
+
         <div id="forthpage">
             <p></p>
             <p></p>
