--- a/index.html
+++ b/index.html
@@ -1,153 +1,163 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>EXAM</title>
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet"
-		  href="styles/sections-2-3.css">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
+    <title>EXAM</title>
+    <link rel="stylesheet"
+          href="styles/main.css">
+    <link rel="stylesheet"
+          href="styles/sections-2-3.css">
 </head>
-	<body>
-		<div class="container">
+<body>
+<div class="container">
 
-				<header class="header">
-					
-					<div class="logo">
-						<img src="images/logo.png" alt="logo">
-						<p>Coffee</p>
-					</div>
+    <header class="header">
 
-					<nav class="nav">
-						<ul class="nav-list">
-							<li class="nav-list__link"><a href="#" class="nav-list__item">About Us</a></li>
-							<li class="nav-list__link"><a href="#" class="nav-list__item">Menu</a></li>
-							<li class="nav-list__link"><a href="#" class="nav-list__item">Home</a></li>
-							<li class="nav-list__link"><a href="#" class="nav-list__item">Review</a></li>
-							<li class="nav-list__link"><a href="#" class="nav-list__item">Contact</a></li>
-						</ul>
-					</nav>
-					
-				</header>
+        <div class="logo">
+            <img src="images/logo.png"
+                 alt="logo">
+            <p>Coffee</p>
+        </div>
 
-			<div class="dreams">
-				<p>Keep your dreams aroused with a cup of coffee.</p>
-				<p>The coffee ideas shared by these generators are not cool at all, as they are not a human being.</p>
-				<button class="button">Buy Now</button>
-			</div>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-list__link"><a href="#"
+                                              class="nav-list__item">About Us</a></li>
+                <li class="nav-list__link"><a href="#"
+                                              class="nav-list__item">Menu</a></li>
+                <li class="nav-list__link"><a href="#"
+                                              class="nav-list__item">Home</a></li>
+                <li class="nav-list__link"><a href="#"
+                                              class="nav-list__item">Review</a></li>
+                <li class="nav-list__link"><a href="#"
+                                              class="nav-list__item">Contact</a></li>
+            </ul>
+        </nav>
 
-		</div>
+    </header>
+
+    <div class="dreams">
+        <p>Keep your dreams aroused with a cup of coffee.</p>
+        <p>The coffee ideas shared by these generators are not cool at all, as they are not a human being.</p>
+        <button class="button">Buy Now</button>
+    </div>
+
+</div>
 
 <!--	-----	offer ------->
 
-		<div class="offer">
-			<h1>That is Our Best Offer</h1>
-			<p class="p-bottom-h1">A coffee shop will help you to tell the audience what your business.</p>
-		
-			<div class="coffe-beans">
+<div class="offer">
+    <h1>That is Our Best Offer</h1>
+    <p class="p-bottom-h1">A coffee shop will help you to tell the audience what your business.</p>
 
-				<div class="coffe-bean">
-					<img src="images/image1.png" alt="coffe-beans-1">
-					<p class="coffe-bean__price">$ 5.99</p>
-					<h3>Brazilian coffe beans</h3>
-					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
-				</div>
+    <div class="coffe-beans">
 
-				<div class="coffe-bean">
-					<img src="images/Image2.png" alt="coffe-beans-2">
-					<p class="coffe-bean__price">$ 4.99</p>
-					<h3>Brazilian coffe beans</h3>
-					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
-				</div>
+        <div class="coffe-bean">
+            <img src="images/image1.png"
+                 alt="coffe-beans-1">
+            <p class="coffe-bean__price">$ 5.99</p>
+            <h3>Brazilian coffe beans</h3>
+            <p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
+        </div>
 
-				<div class="coffe-bean">
-					<img src="images/image3.png" alt="coffe-beans-3">
-					<p class="coffe-bean__price">$ 3.99</p>
-					<h3>Brazilian coffe beans</h3>
-					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
-				</div>
+        <div class="coffe-bean">
+            <img src="images/Image2.png"
+                 alt="coffe-beans-2">
+            <p class="coffe-bean__price">$ 4.99</p>
+            <h3>Brazilian coffe beans</h3>
+            <p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
+        </div>
 
-			</div>
+        <div class="coffe-bean">
+            <img src="images/image3.png"
+                 alt="coffe-beans-3">
+            <p class="coffe-bean__price">$ 3.99</p>
+            <h3>Brazilian coffe beans</h3>
+            <p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
+        </div>
 
-		</div>
+    </div>
+
+</div>
 
 <!--	-----	Our Gallery ------->
 
-        <div id="thirdpage">
+<div id="thirdpage">
 
-            <p class="text-headers">Our Gallery</p>
-            <p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
-                                       what to
-                                       call their new coffee.</p>
-            <div id="img-container-1">
-                <div id="first-img-row">
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-Image1.png"
-                                                   alt=""></a>
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-Image2.png"
-                                                   alt=""></a>
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-Image3.png"
-                                                   alt=""></a>
-                </div>
-                <div id="second-img-row">
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-row-Image1.png"
-                                                   alt=""></a>
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-row-Image2.png"
-                                                   alt=""></a>
-                    <a href="#"
-                       class="href-paragraph"><img src="./images/second-row-Image3.png"
-                                                   alt=""></a>
-                </div>
-            </div>
-            <p id="loadmore">LOAD MORE</p>
+    <p class="text-headers">Our Gallery</p>
+    <p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
+                               what to
+                               call their new coffee.</p>
+    <div id="img-container-1">
+        <div id="first-img-row">
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-Image1.png"
+                                           alt=""></a>
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-Image2.png"
+                                           alt=""></a>
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-Image3.png"
+                                           alt=""></a>
         </div>
+        <div id="second-img-row">
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-row-Image1.png"
+                                           alt=""></a>
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-row-Image2.png"
+                                           alt=""></a>
+            <a href="#"
+               class="href-paragraph"><img src="./images/second-row-Image3.png"
+                                           alt=""></a>
+        </div>
+    </div>
+    <p id="loadmore">LOAD MORE</p>
+</div>
 
 <!--	-----	Follow US ------->
 
-
-        <div id="forthpage">
-            <p></p>
-            <p></p>
-            <p id="followus">Follow US</p>
-            <div>
-                <p class="text-headers">Have an inquiry?</p>
-                <p class="text-headers">Text or call and ask Something.</p>
-            </div>
-            <div id="contacts-compress">
-                <p class="contacts">
-                    <img src="./images/Telephone.png"
+<div id="forthpage">
+    <p></p>
+    <p></p>
+    <p id="followus">Follow US</p>
+    <div>
+        <p class="text-headers">Have an inquiry?</p>
+        <p class="text-headers">Text or call and ask Something.</p>
+    </div>
+    <div id="contacts-compress">
+        <p class="contacts">
+            <img src="./images/Telephone.png"
+                 alt=""
+                 class="icon-contact">
+            +8801742-527137
+        </p>
+        <p class="contacts">
+            <img src="./images/gmail%20loogo.png"
+                 alt=""
+                 class="icon-contact">
+            mdmaksedur17@gmail.com
+        </p></div>
+    <div class="round-buttons">
+        <a href="#"><img src="./images/icons/Twitter.png"
                          alt=""
-                         class="icon-contact">
-                    +8801742-527137
-                </p>
-                <p class="contacts">
-                    <img src="./images/gmail%20loogo.png"
+                         class="round-image"></a>
+        <a href="#"><img src="./images/icons/Facebook.png"
                          alt=""
-                         class="icon-contact">
-                    mdmaksedur17@gmail.com
-                </p></div>
-            <div class="round-buttons">
-                <a href="#"><img src="./images/icons/Twitter.png"
-                                 alt=""
-                                 class="round-image"></a>
-                <a href="#"><img src="./images/icons/Facebook.png"
-                                 alt=""
-                                 class="round-image"></a>
-                <a href="#"><img src="./images/icons/Instagram.png"
-                                 alt=""
-                                 class="round-image"></a>
-                <a href="#"><img src="./images/icons/Linkdin.png"
-                                 alt=""
-                                 class="round-image"></a>
-            </div>
-            <p></p>
-            <p></p>
-        </div>
-	</body>
+                         class="round-image"></a>
+        <a href="#"><img src="./images/icons/Instagram.png"
+                         alt=""
+                         class="round-image"></a>
+        <a href="#"><img src="./images/icons/Linkdin.png"
+                         alt=""
+                         class="round-image"></a>
+    </div>
+    <p></p>
+    <p></p>
+</div>
+</body>
 </html>
