--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>EXAM</title>
 	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet"
-		  href="styles/sections-2-3.css">
+	<link rel="stylesheet" href="styles/sections-2-3.css">
+	<link rel="stylesheet" href="styles/section-4-5.css">
 </head>
 	<body>
 		<div class="container">
