add link css to index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
 
 		<section class="news">
-			<div class="container ">
+			<div class="container" style="background: none; height: auto">
 				<div class="wrapper">
 
 					<div class="news__top-content">
@@ -186,9 +186,10 @@
 			</div>
 		</section>
 
-		<section class="container" style="background: #0D0402; height: auto">
-			<section class="wrapper">
-				<footer class="footer-black">
+		<footer class="footer-black">
+			<div class="container" style="background: #000000; height: auto">
+				<div class="wrapper">
+
 					<div class="footer-black-list-wrapper">
 						<ul class="footer-black__list">
 							<li class="footer-black__list-item footer-black__list_logo"><img src="images/logo.png" alt="Logo-coffee"><span>Coffee</span></li>
@@ -256,9 +257,10 @@
 					<div class="footer-black__copyright">
 						<span>Copyright © 2021 Coffee, All rights reserved. Present by MoxCreative.</span>
 					</div>
-				</footer>
-			</section>
-		</section>
+
+				</div>
+			</div>
+		</footer>
 
 	</body>
 </html>
