--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 					<div class="logo">
 						<img src="images/logo.png" alt="logo">
-						<a href="/" >Coffee</a>
+						<a href="/">Coffee</a>
 					</div>
 
 					<ul class="nav-list">
@@ -57,34 +57,41 @@
 
 <!--	-----	offer ------->
 
-<div class="offer">
+<div class="container">
 
-	<h1>That is Our Best Offer</h1>
-	<p class="p-bottom-h1">A coffee shop will help you to tell the audience what your business.</p>
+	<div class="wrapper">
 
-	<div class="coffe-beans">
+		<div class="offer">
 
-		<div class="coffe-bean">
-			<img src="images/image1.png" alt="coffe-beans-1">
-			<p class="coffe-bean__price">$ 5.99</p>
-			<h3>Brazilian coffe beans</h3>
-			<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
+			<h1>That is Our Best Offer</h1>
+			<p class="p-bottom-h1">A coffee shop will help you to tell the audience what your business.</p>
+
+<!--			<div class="coffe-beans">-->
+
+<!--				<div class="coffe-bean">-->
+<!--					<img src="images/image1.png" alt="coffe-beans-1">-->
+<!--					<p class="coffe-bean__price">$ 5.99</p>-->
+<!--					<h3>Brazilian coffe beans</h3>-->
+<!--					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>-->
+<!--				</div>-->
+
+<!--				<div class="coffe-bean">-->
+<!--					<img src="images/image2.png" alt="coffe-beans-2">-->
+<!--					<p class="coffe-bean__price">$ 4.99</p>-->
+<!--					<h3>Brazilian coffe beans</h3>-->
+<!--					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>-->
+<!--				</div>-->
+
+<!--				<div class="coffe-bean">-->
+<!--					<img src="images/image3.png" alt="coffe-beans-3">-->
+<!--					<p class="coffe-bean__price">$ 3.99</p>-->
+<!--					<h3>Brazilian coffe beans</h3>-->
+<!--					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>-->
+<!--				</div>-->
+
+<!--			</div>-->
+
 		</div>
-
-		<div class="coffe-bean">
-			<img src="images/image2.png" alt="coffe-beans-2">
-			<p class="coffe-bean__price">$ 4.99</p>
-			<h3>Brazilian coffe beans</h3>
-			<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
-		</div>
-
-		<div class="coffe-bean">
-			<img src="images/image3.png" alt="coffe-beans-3">
-			<p class="coffe-bean__price">$ 3.99</p>
-			<h3>Brazilian coffe beans</h3>
-			<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
-		</div>
-
 	</div>
 
 </div>
