add path to icons footer

--- a/index.html
+++ b/index.html
@@ -242,22 +242,22 @@
 						<ul class="social-list">
 							<li class="social-list__item">
 								<div class="social-list__wrapper-img">
-									<a href="https://twitter.com/?lang=ru" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+									<a href="https://twitter.com/?lang=ru" target="_blank"><img src="images/icons/Twitter.png" alt="Twitter"></a>
 								</div>
 							</li>
 							<li class="social-list__item">
 								<div class="social-list__wrapper-img">
-									<a href="https://facebook.com" target="_blank"><img src="images/fb.png" alt="Facebook"></a>
+									<a href="https://facebook.com" target="_blank"><img src="images/icons/Facebook.png" alt="Facebook"></a>
 								</div>
 							</li>
 							<li class="social-list__item">
 								<div class="social-list__wrapper-img">
-									<a href="https://www.instagram.com/" target="_blank"><img src="images/insta.png" alt="Instagram"></a>
+									<a href="https://www.instagram.com/" target="_blank"><img src="images/icons/Instagram.png" alt="Instagram"></a>
 								</div>
 							</li>
 							<li class="social-list__item">
 								<div class="social-list__wrapper-img">
-									<a href="https://ua.linkedin.com/" target="_blank"><img src="images/in_icon.png" alt="Linkedin"></a>
+									<a href="https://ua.linkedin.com/" target="_blank"><img src="images/icons/Linkdin.png" alt="Linkedin"></a>
 								</div>
 							</li>
 						</ul>
