--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>EXAM</title>
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/main-media.css">
 	<link rel="stylesheet" href="styles/sections-2-3.css">
 	<link rel="stylesheet" href="styles/section-4-5.css">
-
 </head>
 <body>
 
@@ -78,14 +78,14 @@
 				<div class="coffe-bean">
 					<img src="images/image2.png" alt="coffe-beans-2">
 					<p class="coffe-bean__price">$ 4.99</p>
-					<h3>Brazilian coffe beans</h3>
+					<h3>Vietnam coffe beans</h3>
 					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
 				</div>
 
 				<div class="coffe-bean">
 					<img src="images/image3.png" alt="coffe-beans-3">
 					<p class="coffe-bean__price">$ 3.99</p>
-					<h3>Brazilian coffe beans</h3>
+					<h3>Indonesian coffe beans</h3>
 					<p class="coffe-bean__desc">Coffee that’s always you handle your own the way you like. </p>
 				</div>
 
