--- a/index.html
+++ b/index.html
@@ -99,74 +99,54 @@
 <!--	-----	Our Gallery ------->
 
 <div id="thirdpage">
-	<p class="text-headers">Our Gallery</p>
-	<p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
-		what to
-		call their new coffee.</p>
-	<div id="img-container-1">
-		<div id="first-img-row">
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-Image1.png"
-																		 alt=""></a>
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-Image2.png"
-																		 alt=""></a>
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-Image3.png"
-																		 alt=""></a>
-		</div>
-		<div id="second-img-row">
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-row-Image1.png"
-																		 alt=""></a>
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-row-Image2.png"
-																		 alt=""></a>
-			<a href="#"
-				 class="href-paragraph"><img src="./images/second-row-Image3.png"
-																		 alt=""></a>
+	<div class="container">
+		<div class="wrapper">
+			<p class="text-headers">Our Gallery</p>
+			<p class="text-paragraphs">The coffee shop name generator is a great tool for those that are deliberating
+				what to
+				call their new coffee.</p>
+			<div id="img-container-1">
+				<div id="first-img-row">
+					<a href="#" class="href-paragraph"><img src="./images/second-Image1.png" alt=""></a>
+					<a href="#" class="href-paragraph"><img src="./images/second-Image2.png" alt=""></a>
+					<a href="#" class="href-paragraph"><img src="./images/second-Image3.png" alt=""></a>
+				</div>
+				<div id="second-img-row">
+					<a href="#" class="href-paragraph"><img src="./images/second-row-Image1.png" alt=""></a>
+					<a href="#" class="href-paragraph"><img src="./images/second-row-Image2.png" alt=""></a>
+					<a href="#" class="href-paragraph"><img src="./images/second-row-Image3.png" alt=""></a>
+				</div>
+			</div>
+			<p id="loadmore">LOAD MORE</p>
 		</div>
 	</div>
-	<p id="loadmore">LOAD MORE</p>
 </div>
 
 <div id="forthpage">
-	<p></p>
-	<p></p>
-	<p id="followus">Follow US</p>
-	<div>
-		<p class="text-headers">Have an inquiry?</p>
-		<p class="text-headers">Text or call and ask Something.</p>
+	<div class="container">
+		<div class="wrapper wrapper-flex">
+			<p id="followus">Follow US</p>
+			<div class="forthpage__top-content">
+				<p class="text-headers">Have an inquiry?</p>
+				<p class="text-headers">Text or call and ask Something.</p>
+			</div>
+			<div id="contacts-compress">
+				<p class="contacts">
+					<img src="./images/Telephone.png" alt="icon-phone" class="icon-contact">
+					<a href="tel:+8801742-527137" title="+8801742-527137">+8801742-527137</a>
+				</p>
+				<p class="contacts">
+					<img src="./images/gmail%20loogo.png" alt="icon-email" class="icon-contact">
+					<a href="mailto:mdmaksedur17@gmail.com">mdmaksedur17@gmail.com</a>
+				</p></div>
+			<div class="round-buttons">
+				<a href="#"><img src="./images/icons/Twitter.png" alt="Twitter" class="round-image"></a>
+				<a href="#"><img src="./images/icons/Facebook.png" alt="Facebook" class="round-image"></a>
+				<a href="#"><img src="./images/icons/Instagram.png" alt="Instagram" class="round-image"></a>
+				<a href="#"><img src="./images/icons/Linkdin.png" alt="Linkdin" class="round-image"></a>
+			</div>
+		</div>
 	</div>
-	<div id="contacts-compress">
-		<p class="contacts">
-			<img src="./images/Telephone.png"
-					 alt=""
-					 class="icon-contact">
-			+8801742-527137
-		</p>
-		<p class="contacts">
-			<img src="./images/gmail%20loogo.png"
-					 alt=""
-					 class="icon-contact">
-			mdmaksedur17@gmail.com
-		</p></div>
-	<div class="round-buttons">
-		<a href="#"><img src="./images/icons/Twitter.png"
-										 alt=""
-										 class="round-image"></a>
-		<a href="#"><img src="./images/icons/Facebook.png"
-										 alt=""
-										 class="round-image"></a>
-		<a href="#"><img src="./images/icons/Instagram.png"
-										 alt=""
-										 class="round-image"></a>
-		<a href="#"><img src="./images/icons/Linkdin.png"
-										 alt=""
-										 class="round-image"></a>
-	</div>
-	<p></p>
-	<p></p>
 </div>
 <section class="news">
 	<div class="container ">
@@ -216,7 +196,7 @@
 					<li class="footer-black__list-item">
 						<p>Creating a catchy tagline coffee shop business growth.</p>
 					</li>
-					<li class="footer-black__list-item">
+					<li class="footer-black__list-item footer-black__list-item_phone">
 						<div class="footer__black-icon-wrapper">
 							<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
 								<path d="M18 6.8496C18 3.99822 15.6803 1.67847 12.8289 1.67847H5.17113C2.31975 1.6785 0 3.99825 0 6.84964C0 7.69163 0.68502 8.37665 1.52701 8.37665H2.98459L1.92927 10.7665C1.55633 11.6111 1.36723 12.5075 1.36723 13.4307V14.41C1.36723 15.4642 2.2249 16.3219 3.27913 16.3219H14.7206C15.7749 16.3219 16.6325 15.4642 16.6325 14.41V13.4307C16.6325 12.5074 16.4434 11.6111 16.0704 10.7665L15.0151 8.37665H16.473C17.315 8.37661 18 7.69163 18 6.8496ZM5.17113 2.85747H12.8289V2.8575C14.4894 2.8575 15.9162 3.87675 16.5171 5.32238H13.1196C12.8293 5.02183 12.4225 4.83437 11.9726 4.83437H6.0274C5.57666 4.83437 5.16927 5.02256 4.87877 5.32406C4.86745 5.32343 4.85624 5.32234 4.84478 5.32234H1.48296C2.08378 3.87668 3.5106 2.85747 5.17113 2.85747ZM1.52701 7.19758C1.33513 7.19758 1.17904 7.04152 1.17904 6.8496C1.17904 6.73228 1.18441 6.6162 1.1944 6.50141H4.43162V6.95644C4.43162 7.0894 4.32341 7.19754 4.19048 7.19754H1.52701V7.19758ZM15.4535 13.4306V14.4099C15.4535 14.814 15.1248 15.1427 14.7206 15.1427H3.27913C2.87504 15.1427 2.54626 14.814 2.54626 14.4099V13.4306C2.54626 12.6724 2.70155 11.9363 3.00783 11.2427L4.27468 8.3739C5.01873 8.33017 5.61069 7.71124 5.61069 6.95647V6.43026C5.61069 6.20044 5.79765 6.01348 6.02743 6.01348H11.9726C12.2024 6.01348 12.3893 6.20044 12.3893 6.43026V6.95647C12.3893 7.71117 12.9811 8.33006 13.725 8.3739L14.9919 11.2428C15.2982 11.9363 15.4535 12.6724 15.4535 13.4306ZM13.8096 7.19761V7.19758C13.6766 7.19758 13.5684 7.08944 13.5684 6.95647V6.50145H16.8056C16.8156 6.61623 16.821 6.73232 16.821 6.84967C16.821 7.04155 16.6649 7.19765 16.473 7.19765H13.8096V7.19761Z" fill="white"/>
