footer add styles in section-4-5.css

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	</div>
 </section>
 
-<section class="container" style="background: #0D0402; height: auto">
+<section class="container container-footer-bg">
 	<section class="wrapper">
 		<footer class="footer-black">
 			<div class="footer-black-list-wrapper">
