add media-section-4-5.css and include in head

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="styles/main-media.css">
 	<link rel="stylesheet" href="styles/sections-2-3.css">
 	<link rel="stylesheet" href="styles/section-4-5.css">
+	<link rel="stylesheet" href="styles/media-section-4-5.css">
 </head>
 <body>
 
